--- a/apply_css.html
+++ b/apply_css.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <title>ApplyCss by Sfate</title>
+  <link rel="stylesheet" type="text/css" href="http://sfate.github.com/ApplyCss/stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="http://sfate.github.com/ApplyCss/stylesheets/pygment_trac.css" media="screen">
   <script src="apply_css.js"></script>
   <link href="style.css" rel="stylesheet">
   <body>
@@ -7,10 +12,21 @@
       <textarea id="css" placeholder="Place your css here..."></textarea>
       <textarea id="html" placeholder="Place your html here..."></textarea>
     </div>
-    <input type="button" id="apply" value="apply">
+    <input type="button" id="apply" class="btn" value="apply" align="center"> <a><---- press me...</a>
     <div id="output">
-      <textarea placeholder="Result.."></textarea>
+      <textarea placeholder="Result.." readonly="readonly"></textarea>
     </div>
+    <header>
+      <div class="container">
+        <h1>ApplyCss <a href="http://github.com/sfate" target="_newtab">by Sfate</a></h1>
+        <h2>Form that allows you to parse css and apply it to html</h2>
+        <section id="downloads">
+        <a href="https://github.com/Sfate/ApplyCss/zipball/master" class="btn">Download as .zip</a>
+        <a href="https://github.com/Sfate/ApplyCss/tarball/master" class="btn">Download as .tar.gz</a>
+        <a href="https://github.com/Sfate/ApplyCss" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
   </body>
 </head>
 
