--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <title>ApplyCss by Sfate</title>
-  <link rel="stylesheet" type="text/css" href="http://sfate.github.com/ApplyCss/stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="http://sfate.github.com/ApplyCss/stylesheets/pygment_trac.css" media="screen">
-  <script src="apply_css.js"></script>
-  <link href="style.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="stylesheets/layout.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="stylesheets/page.css" media="screen">
+  <script src="js/main.js"></script>
   <body>
     <div id="input">
       <textarea id="css" placeholder="Place your css here..."></textarea>
